# robotics-lab

./: .gitignore  README.md
emergency_stop/: CMakeLists.txt  README.md  move_base.launch  package.xml  test.launch
emergency_stop/config/: costmap_common_params.yaml
emergency_stop/src/: emergency_stop_node.cpp
emergency_stop/stage_config/maps/: mymap.pgm
homework0/: CMakeLists.txt  package.xml
homework0/launch/: nearest.launch
homework0/src/: nearest_obstacle.py
homework2/: CMakeLists.txt  package.xml
homework2/src/: laser_position.cpp
homework4/: CMakeLists.txt  package.xml
homework4/src/: laser2img.cpp
homework5/: CMakeLists.txt  package.xml
homework5/action/: Forward.action
homework5/src/: homework5_client.cpp  homework5_server.cpp
homework6/: CMakeLists.txt  package.xml
homework6/src/: kinect_pcfilter.cpp
